# Aphelion-Graph

./: .forbidden-terms.txt  .gitignore  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
adr/: 0001-content-hash-granularity.md  0002-v0.3-claim-semantics-r1r4.md
benchmarks/longmemeval/: corpus.py  pipeline.py  preregister.json  retriever.py  run.py
docs/benchmark/: longmemeval-3arm-design.md
docs/m9-prep/: crosswalk-schema-tristate.md  implementor-guide.md  pypi-readme-polish.md  spec-social-review-faq.md
samples/architecture-claim/: README.md  expected-normalized.json  manifest.json  provenance.jsonl
samples/contradictory-claim/: README.md  expected-normalized.json  manifest.json  provenance.jsonl
schemas/: aphelion-v0.4.json  claim-frontmatter.schema.json  diff-v0.3.json  diff-v0.4.json  dpkg-v0.3.json  expected-normalized-v0.3.json  expected-normalized-v0.4.json  manifest.schema.json  provenance-event.schema.json
scripts/: check_forbidden_terms.py  external_reader.py  generate_samples.py
spec/: VERSIONING.md  canonical-serialization.md  claim-frontmatter.md  content-hash.md  error-codes.md  identity-event.md  lifecycle-state-machine.md  migration-v0.3-to-v0.4.md  packaging.md  provenance.md  reserved-namespaces.md  schema-matrix.md  v0.3-claim-semantics.md  v0.5-signer-trust.md  v0.6-notary-attestation.md  validator.md
tests/: _fixture_factory.py  conftest.py  test_benchmarks_arms.py  test_benchmarks_corpus.py  test_benchmarks_smoke.py  test_canonical_json.py  test_canonical_tar.py  test_canonicalize.py  test_cli.py  test_cli_output.py  test_cli_validate_samples.py  test_content_hash.py  test_diff.py  test_diff_fuzz_hardening.py  test_errors.py  test_external_reader.py  test_fixtures.py  test_forbidden_terms.py  test_init.py  test_lifecycle_state_machine.py  test_migrate.py  test_packer.py  test_preregister.py  test_properties.py  test_read_adapter.py  test_sig_pack.py  test_signer.py  test_trust.py  test_trust_notary_envelope.py  test_unpacker.py  test_v03_validator.py  test_validator.py  test_verifier_signed.py  test_versioning.py
(+173 files in other folders)
