[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aphelion"
version = "0.4.0"
description = "Aphelion reference implementation - deterministic package format"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [{ name = "Aphelion Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "coverage>=7.0"]

[project.scripts]
aphe = "aphelion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
