[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aphelion"
version = "0.5.0"
description = "Aphelion reference implementation - deterministic package format"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [{ name = "Aphelion Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "coverage>=7.0", "hypothesis>=6.0"]
signer = ["cryptography>=42"]

[project.scripts]
aphe = "aphelion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "unit: fast unit tests with no I/O",
    "integration: tests that require external resources",
]
